--- a/apps/zefyrlab_web/priv/static/assets/app.css
+++ b/apps/zefyrlab_web/priv/static/assets/app.css
@@ -798,6 +798,10 @@ select {
   margin-top: 0.375rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .block {
   display: block;
 }
@@ -859,6 +863,10 @@ select {
 
 .w-full {
   width: 100%;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-80 {
@@ -935,6 +943,10 @@ select {
   align-self: flex-start;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .text-wrap {
   text-wrap: wrap;
 }
@@ -951,6 +963,10 @@ select {
   border-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -961,6 +977,11 @@ select {
   padding-right: 1rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -968,6 +989,14 @@ select {
 
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1772,6 +1801,10 @@ h1.logo-heading .logo-accent {
     text-align: left;
     max-width: 100%;
   }
+}
+
+.last\:border-0:last-child {
+  border-width: 0px;
 }
 
 .hover\:cursor-pointer:hover {
